@@ -6,7 +6,9 @@ class TempAnnotationController extends \BaseController
   public $returnProperties = ['_id', 'collection_id', 'document_id', 'owner_id',
     'annotator_id', 'document_attribute',
     'type', 'spans', 'attributes',
-    'created_at', 'created_by', 'updated_at', 'updated_by', 'deleted_at'];
+    'created_at', 'created_by', 'updated_at', 'updated_by', 'deleted_at',
+    'collection_setting', 'document_setting'
+  ];
 
   //apply filter for the shared/non-shared collections 
   public function __construct()
@@ -55,7 +57,7 @@ class TempAnnotationController extends \BaseController
   //store a new annotation
   public function store($collection_id, $document_id)
   {
-    $optional = ["document_attribute"];
+    $optional = ['document_attribute', 'collection_setting', 'document_setting'];
     try {
       $user = Sentinel::getUser();
       $new_annotations = [];
